<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuizMe</string>

    <string name="grade">Check</string>
    <string name="toast_message" tools:ignore="StringFormatMatches">You scored %1$s %%</string>
    <string name="player_name">What is your Name?</string>

    //questions
    <string name="question0">What arithmetic operation does this symbol specify, \'+\' ?</string>
    <string name="question1">10 + 52 = ?</string>
    <string name="question2">30 + -21 = ?</string>
    <string name="question3">100 / 100 = ?</string>
    <string name="question4">-95 + 95 = ?</string>
    <string name="question5">The above questions tested which arithmetic operations?</string>

    //answers
    <string name="rb11">42</string>
    <string name="rb12">62</string>
    <string name="rb13">53</string>
    <string name="rb21">9</string>
    <string name="rb22">11</string>
    <string name="rb23">51</string>
    <string name="rb31">0</string>
    <string name="rb32">10</string>
    <string name="rb33">1</string>
    <string name="rb41">0</string>
    <string name="rb42">190</string>
    <string name="rb43">95</string>
    <string name="multiplication">Multiplication</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="division">Division</string>
    <string name="answer_here">answer here</string>
</resources>
